# agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  product_roadmap.md  pyproject.toml
ai_code_agent/: __init__.py  config.py  main.py  metrics.py  orchestrator.py  skills.py  validation.py  webhook.py
artifact/: execution_metrics_schema.md  export_ci_artifacts.py  implementation_plan.md  product_roadmap.md  run_compose_smoke.py  run_nestjs_smoke.py  run_nextjs_visual_review_smoke.py  run_retrieval_eval.py  run_retry_strategy_benchmark.py  runtime_matrix.md  task.md  version_feature_list.md  walkthrough.md
monitor_frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo
skills/: README.md
tests/: test_ci_artifact_export.py  test_code_search_explain_candidate.py  test_coder_file_policy.py  test_coder_frontend_quality.py  test_coder_remediation_loop.py  test_edit_policy.py  test_execution_metrics.py  test_execution_metrics_artifact.py  test_git_ops.py  test_llm_client_fallback.py  test_main.py  test_nextjs_visual_review_smoke.py  test_orchestrator_audit_trail.py  test_planner_candidate_explanations.py  test_planner_design_brief.py  test_planner_file_policy.py  test_planner_remediation_intent.py  test_planner_skills.py  test_reviewer_normalization.py  test_reviewer_summary.py  test_reviewer_visual_review.py  test_runtime_policy.py  test_sandbox.py  test_skills.py  test_task_model.py  test_tester_validation_metrics.py  test_tester_visual_review.py  test_validation.py  test_version_consistency.py  test_version_resolution.py  (+2 more)
(+54 files in other folders)
